===============================================================================
Changes for faraday
===============================================================================

[248] add developer control for C fudge factor


TODO:
[248] incorrect bulb flashing
[351] make B-field inside the magnet appear to move with the magnet
[424] B-field markers should disappear before they flip when bar magnet passes over them
[420] lightbulb should be transparent
[283] improve collision detection
[437] add "constant voltage source" feature
[423] change bar magnet colors to green and white
[442] make faraday into multiple sims
[443] add Earth image feature
[79] rotate coil or magnet
- convert model from Observer to Listener pattern

DONE:
3/27/08 - enable display of flux by default (developer control) [248]
3/27/08 - convert Developer menu items to a dialog so we can add other types of controls [248]
3/27/08 - simplify calculation of single-loop flux in PickupCoil.updateEmf [248]
********* version 1.05.04 (20411)
3/27/08 - reduce spacing between sample points on pickup coils [248]
3/27/08 - change CoilMagnet shape from circle to square to accommodate new pickup coil sample point strategy [248]
3/27/08 - remove redundant bounds member from DipoleMagnet, use modelShape to determine inside/outside [248]
3/26/08 - recalibrate PICKUP_REFERENCE_EMF and module scaling factors (LIGHTBULB_SCALE, VOLTMETER_SCALE, ELECTRON_SPEED_SCALE) [441]
3/26/08 - rename FaradayConstants.MAX_PICKUP_EMF to PICKUP_REFERENCE_EMF, add doc about how to set this [441]
3/26/08 - rename "voltage source" to "current source" throughout source code [437]
3/26/08 - set size of bar magnet model directly, scale graphic accordingly (instead of visa versa) [248]
3/26/08 - add a flag for quickly switching between pickup coil sample points strategies [248]
3/26/08 - set variable sample points strategy for pickup coil based on height of magnet [248]