@@ -57,6 +57,7 @@ public class PickupCoilModule extends FaradayModule {
     private static final double PICKUP_COIL_LOOP_AREA = FaradayConstants.DEFAULT_PICKUP_LOOP_AREA;
     private static final double PICKUP_COIL_DIRECTION = 0.0; // radians
     private static final double PICKUP_COIL_DISTANCE_EXPONENT = 3.0;
+    private static final double PICKUP_COIL_FUDGE_FACTOR = 0.77; // see PickupCoil.setFudgeFactor
     
     // Scaling
     private static final double LIGHTBULB_SCALE = 4.0;
@@ -125,6 +126,7 @@ public class PickupCoilModule extends FaradayModule {
         _pickupCoilModel.setLoopArea( PICKUP_COIL_LOOP_AREA );
         _pickupCoilModel.setDirection( PICKUP_COIL_DIRECTION );
         _pickupCoilModel.setLocation( PICKUP_COIL_LOCATION );
+        _pickupCoilModel.setFudgeFactor( PICKUP_COIL_FUDGE_FACTOR );
         if ( FaradayConstants.USE_VARIABLE_NUMBER_OF_PICKUP_COIL_SAMPLE_POINTS ) {
             final double ySpacing = _barMagnetModel.getHeight() / 10;
             _pickupCoilModel.setSamplePointsStrategy( new VariableNumberOfSamplePointsStrategy( ySpacing ) );
